# scroll-share

./: .gitignore  CLAUDE.md  README.md  Tiltfile  docker-compose.dev.yaml  kind-config.yaml
.github/: CODEOWNERS
deploy/db/init/: 00_create_schemas.sql  01_create_roles.sql
deploy/k8s/: ingress.yaml  namespace.yaml
deploy/k8s/auth-service/: configmap.yaml  deployment.yaml  service.yaml
deploy/k8s/postgres/: cluster.yaml
docs/: architecture.md
issues/: 2.md
scripts/: verify-infra.sh
services/auth-service/: .dockerignore  Cargo.toml  Dockerfile
services/auth-service/migrations/: 00000000000000_init.sql  20240101000001_create_users_table.sql
services/auth-service/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs
services/auth-service/src/models/: user.rs
services/auth-service/src/routes/: auth.rs  health.rs
services/auth-service/src/services/: password.rs
services/auth-service/tests/: health.rs  registration.rs
services/auth-service/tests/common/: mod.rs
